# madlib-cli

./: pyproject.toml
assets/: madlib_template.txt
madlib_cli/: madlib.py
tests/: test_madlib.py
